force-app/main/default/objects/Lv_Reservation__c/fields/Date_Effective__c.field-meta.xml
<CustomField>
    <fullName>Date_Effective__c</fullName>
    <label>Date Effective</label>
    <type>Date</type>
</CustomField>