force-app/main/default/objects/Lv_Reservation__c/fields/Date_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Date_Reservation__c</fullName>
    <label>Date Reservation</label>
    <type>Date</type>
</CustomField>