force-app/main/default/objects/Lv_Reservation__c/fields/Missions__c.field-meta.xml
<CustomField>
    <fullName>Missions__c</fullName>
    <label>Missions</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>