force-app/main/default/objects/Lv_Reservation__c/fields/Nombre_Jour__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Jour__c</fullName>
    <label>Nombre Jour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>