force-app/main/default/objects/Lv_Reservation__c/fields/Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicule</label>
    <referenceTo>Lv_Vehicule__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>